# zotero-mcp

./: README.md  pyproject.toml
docs/: DEVELOPMENT_GUIDE.md  ZOTERO_MCP_中文文档.md
src/zotero_mcp/: server.py  utils.py
