[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-server"
dynamic = ["version"]
authors = [
  { name = "54yyyu", email = "54yyyu@github.com" },
]
description = "A Model Context Protocol server for Zotero"
keywords = ["zotero", "mcp", "model-context-protocol", "research", "citations", "bibliography"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero>=1.5.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "markitdown[pdf]",
    # Pin onnxruntime<=1.20.1 on Windows: magika (markitdown dep) has import
    # compatibility issues with onnxruntime 1.21+ (cuda_version ImportError).
    "onnxruntime<=1.20.1; sys_platform == 'win32'",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "fastmcp>=2.14.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "google-genai>=0.7.0",
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/54yyyu/zotero-mcp"
"Bug Tracker" = "https://github.com/54yyyu/zotero-mcp/issues"
"Documentation" = "https://stevenyuyy.us/zotero-mcp/"
"Changelog" = "https://github.com/54yyyu/zotero-mcp/blob/main/CHANGELOG.md"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
